--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@prisma/client": "^6.18.0",
     "axios": "^1.13.1",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "qs": "^6.14.0"
+    "qs": "^6.14.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "prisma": "^6.18.0"
